# msc

./: .gitignore  ADBBLITZ_E2E_TESTS.md  AGENTS.md  README.md  TESTING.md  performance_test.py  pyproject.toml  pytest.ini  test.py  test_adbblitz.py  visualize_performance.py
msc-adb/: pyproject.toml
msc-adb/src/msc/: adbcap.py
msc-adb/tests/: README.md  test_adbcap.py  test_adbcap_e2e.py
msc-adbblitz/: README.md  pyproject.toml
msc-adbblitz/src/msc/: __init__.py  adbblitz.py
msc-adbblitz/tests/: test_adbblitz_e2e.py  test_adbblitz_unit.py
msc-base/: pyproject.toml
msc-base/src/msc/: __init__.py  screencap.py
msc-droidcast/: pyproject.toml
msc-droidcast/src/msc/: droidcast.py
msc-droidcast/tests/: README.md  test_droidcast.py  test_droidcast_e2e.py
msc-minicap/: pyproject.toml
msc-minicap/src/msc/: minicap.py
msc-minicap/tests/: README.md  test_minicap.py  test_minicap_e2e.py
msc-mumu/: pyproject.toml
msc-mumu/src/msc/: mumu.py
msc-mumu/tests/: README.md  test_mumu.py  test_mumu_e2e.py
