[project]
name = "msc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "msc-adb",
    "msc-adbblitz",
    "msc-base",
    "msc-droidcast",
    "msc-minicap",
    "msc-mumu",
]

[tool.uv.workspace]
members = ["msc-base", "msc-droidcast", "msc-minicap", "msc-adb", "msc-mumu", "msc-adbblitz"]

[tool.uv.sources]
msc-base = { workspace = true }
msc-adb = { workspace = true }
msc-adbblitz = { workspace = true }
msc-droidcast = { workspace = true }
msc-minicap = { workspace = true }
msc-mumu = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
