[project]
name = "msc-adbblitz"
version = "0.1.0"
description = "High-performance ADB screenshot backend using H264 streaming"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "adbutils>=2.8.0",
    "adbnativeblitz",
    "loguru>=0.7.3",
    "msc-base",
    "opencv-python-headless>=4.11.0.86",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/msc"]

[tool.uv.sources]
msc-base = { workspace = true }
